correct movie entity #114